# Retrieval-Algorithms-and-Techniques

./: .gitignore  README.md
ai_agent/: main.py  pyproject.toml
ai_agent/ag_ui/: router.py
ai_agent/artifacts/: converter.py  generator.py  pdf_highlighter.py  text_highlighter.py
ai_agent/gdrive/: client.py
ai_agent/indexing/: indexer.py
ai_agent/parsers/: docx_parser.py  pdf_parser.py  pptx_parser.py  text_parsers.py  xlsx_parser.py
ai_agent/rag/: qa_service.py
ai_agent/vector_store/: db.py
tests/: test_main.py
