[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "A backend-only AI agent for Q&A over a private document base."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.5.2"
httpx = "0.25.1"
google-api-python-client = "^2.88.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
PyMuPDF = "^1.23.6"
python-docx = "^0.8.11"
openpyxl = "^3.1.2"
python-pptx = "^0.6.23"
chromadb = "^0.4.18"
numpy = "<2.0"
sentence-transformers = "^2.2.2"
openai = "^1.3.7"
Pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
agent = "ai_agent.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
